# SortPlugin

./: CMakeLists.txt  README.md  main.cpp  plugin_builder.h  plugin_loader.h  sort_algo.h  timer.h
plugins/: CMakeLists.txt  bsort.cpp  bsort.h  mergesort.cpp  ompmsort.cpp  ompqsort.cpp  ompsort.h  qsort.cpp  qsort.h  stdsort.cpp  stdsort.h  thrustsort.cu  thrustsort.h
